guix/dotfiles/guixsd/etc/iptables/ip6tables.rules
# Generated by ip6tables-save v1.8.8 on Tue Feb 27 05:26:32 2024
*mangle
:PREROUTING ACCEPT [18122534:2907474118]
:INPUT ACCEPT [17881261:2847157751]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30203829:4721575526]
:POSTROUTING ACCEPT [55620035:8584838838]
:KUBE-KUBELET-CANARY - [0:0]
COMMIT
# Completed on Tue Feb 27 05:26:32 2024
# Generated by ip6tables-save v1.8.8 on Tue Feb 27 05:26:32 2024
*nat
:PREROUTING ACCEPT [261669:62300145]
:INPUT ACCEPT [35520:2843938]
:OUTPUT ACCEPT [63136:5052632]
:POSTROUTING ACCEPT [63136:5052632]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-POSTROUTING - [0:0]
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
COMMIT
# Completed on Tue Feb 27 05:26:32 2024
# Generated by ip6tables-save v1.8.8 on Tue Feb 27 05:26:32 2024
*filter
:INPUT DROP [631513:95989976]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1397494:218333348]
:KUBE-FIREWALL - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
-A INPUT -d 201:c18b::/32 -p tcp -m tcp --dport 6443 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j KUBE-FIREWALL
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
COMMIT
# Completed on Tue Feb 27 05:26:32 2024
